--- a/app/templates/remove_update.html
+++ b/app/templates/remove_update.html
@@ -18,6 +18,8 @@
 		<form action="{{ url_for('delete_employee') }}" method="post" >
 			<h2>Employee Name</h2>
 			<input type="text" size="30" name="Employee_Name">
+			<h2>Employee Number</h2>
+			<input type="number" size="30" name="Employee_Id">
 			<br><br><input type="submit" value="Remove">
 		</form>
 	{% else %}
