added nfc scan info and employee access

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,7 @@
 		<div id="admin">
 			<h2><a href="{{ url_for('add_employee') }}" title="Add employee to system">Add Employee</a></h2>
 			<h2><a href="{{ url_for('remove_update') }}" title="Remove or update employee in system">Remove or Update Employee</a></h2>
+			<h2><a href="{{ url_for('test_scan_nfc') }}" >nfc test</a></h2>
 		</div>
 	{% else %}
 		<h2>Please Login</h2>
