fixed up coordinates, added getter for employee location

--- a/app/templates/add_employee.html
+++ b/app/templates/add_employee.html
@@ -9,7 +9,7 @@
 			<h2>Employee Number</h2>
 			<input type="number" size="30" name="Employee_Id">
 			<h2>Badge Number</h2>
-			<input type="number" size="30" name="Nfc_Id">
+			<input type="text" size="30" name="Nfc_Id">
 			<h2>Department</h2>
 			<input type="text" size="30" name="Department">
 			<h2>Clearence Level</h2>
