--- a/app/templates/test_scan_nfc.html
+++ b/app/templates/test_scan_nfc.html
@@ -8,7 +8,7 @@
 			<h2>Employee Number</h2>
 			<input type="number" size="30" name="Employee_Id">
 			<h2>Room Id</h2>
-			<input type="number" size="30" name="Room_Id">
+			<input type="text" size="30" name="Room_Id">
 			<br><br><input type="submit" value="Submit">
 		</form>
 	</div>
