--- a/app/templates/add_security.html
+++ b/app/templates/add_security.html
@@ -1,15 +1,16 @@
 {% extends "layout.html" %}
 {% block body %}
-	<h1>Testing Wifi Scan</h1>
+	<h1>Adding Security Personnel</h1>
 	{% if session.logged_in %}
 	<div id="form">
-		<form action="{{ url_for('post_nfcScan') }}" method="post" >
-			<h2>NFC Token</h2>
-			<input type="text" size="40" name="Token">
+		<form action="{{ url_for('post_employee') }}" method="post" >
+			<h2>Employee Name</h2>
+			<input type="text" size="30" name="Employee_Name">
 			<h2>Employee Number</h2>
 			<input type="number" size="30" name="Employee_Id">
-			<h2>Room Id</h2>
-			<input type="text" size="30" name="BSSID">
+			<h2>Password</h2>
+			<input type="text" size="30" name="Password">
+			<br><br><input type="submit" value="Submit">
 		</form>
 	</div>
 	{% else %}
