--- a/app/templates/remove_update.html
+++ b/app/templates/remove_update.html
@@ -10,9 +10,17 @@
 			<h2>Badge Number</h2>
 			<input type="number" size="30" name="Nfc_Id">
 			<h2>Department</h2>
-			<input type="text" size="30" name="Department">
+			<select name="Department">
+				<option value="cse">CSE</option>
+				<option value="accounting">Accounting</option>
+				<option value="marketing">Marketing</option>
+			</select>
 			<h2>Clearence Level</h2>
-			<input type="number" size="30" name="Clearence_Level">
+			<select name="Clearence_Level">
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+			</select>
 			<br><br><input type="submit" value="Update">
 		</form>
 		<form action="{{ url_for('delete_employee') }}" method="post" >
