--- a/app/templates/add_security.html
+++ b/app/templates/add_security.html
@@ -5,11 +5,19 @@
 	<div id="form">
 		<form action="{{ url_for('post_employee') }}" method="post" >
 			<h2>Employee Name</h2>
-			<input type="text" size="30" name="Employee_Name">
+			<input type="text" size="30" name="Username">
 			<h2>Employee Number</h2>
 			<input type="number" size="30" name="Employee_Id">
 			<h2>Password</h2>
 			<input type="text" size="30" name="Password">
+			<h2>Badge Number</h2>
+			<input type="text" size="30" name="Nfc_Id">
+			<h2>Clearence Level</h2>
+			<select name="Clearence_Level">
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+			</select>
 			<br><br><input type="submit" value="Submit">
 		</form>
 	</div>
